SLCORE-645   Remove getServerHotspots() from SonarLintEngine in favour of RPC